# DSA_search_engine

./: .gitignore  CMakeLists.txt
include/: MetaDataParser.hpp  auto_complete.hpp  forward_index.hpp  inverted_index.hpp  lemmatizer.hpp  lexicon.hpp  searching.hpp  semantic_search.hpp  text_processing.hpp  word_attributes.hpp
indices/: forward_index.txt  inverted_index.csv  inverted_index_barrel0.csv  inverted_index_barrel1.csv  inverted_index_barrel2.csv  inverted_index_barrel3.csv  inverted_index_barrel4.csv  lexicon.csv
sample_data_subset/: metadata.csv
src/: MetaDataParser.cpp  Testing.cpp  auto_complete.cpp  forward_index.cpp  inverted_index.cpp  lemmatizer.cpp  lexicon.cpp  main.cpp  main_server.cpp  searching.cpp  sematic_search.cpp  text-processing.cpp
web/: package-lock.json  package.json  server.js
web/public/: index.html  script.js  styles.css
